--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+		<link rel="stylesheet" href="%sveltekit.assets%/styles/app.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Portfolio</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="animated-element">
+		<main>%sveltekit.body%</main>
 	</body>
 </html>
