Add tech stack section

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<title>Portfolio</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="animated-element">
+	<body data-sveltekit-preload-data="hover" class="animatedElement">
 		<main>%sveltekit.body%</main>
 	</body>
 </html>
