--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<script>
+			(function () {
+				try {
+					const saved = localStorage.getItem('theme');
+					const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+					const theme = saved || (prefersDark ? 'dark' : 'light');
+					document.documentElement.setAttribute('data-theme', theme);
+				} catch (_) {}
+			})();
+		</script>
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="stylesheet" href="%sveltekit.assets%/styles/app.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
