Add sidebar for mobile sizes

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
             })();
         </script>
         <link rel="icon" href="%sveltekit.assets%/favicon.svg"/>
+        <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Portfolio</title>
         %sveltekit.head%
