--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
         <title>Portfolio</title>
         %sveltekit.head%
     </head>
-    <body data-sveltekit-preload-data="hover" class="animatedElement">
+    <body data-sveltekit-preload-data="hover">
         <div style="display: contents">
             %sveltekit.body%
         </div>
