--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,9 @@
                 }
             })();
         </script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
         <link rel="icon" href="%sveltekit.assets%/favicon.svg"/>
         <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
